--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="container">
             <h2 class="title">Online courses</h2>
             <div class="row online--course--row">
-                <div class="col col-xl-3 col-md-6">
+                <div class="col col-xl-3 col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6">
+                <div class="col col-xl-3 col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6">
+                <div class="col col-xl-3 col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6">
+                <div class="col col-xl-3 col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -273,7 +273,7 @@
         <h2 class="title--cons">IDF Consortium</h2>
         <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner" id="carousel--consortium">
-                <div class="carousel-item active row consortium--row">
+                <div class="carousel-item active consortium--row">
                     <div class="col col-md-12">
                         <a class="cons--logo" href=""><img src="images/ABA logo.png" alt="ABA logo"></a>
                         <a class="cons--logo" href=""><img src="images/ADB logo.png" alt="ADB logo"></a>
@@ -283,7 +283,7 @@
                         <a class="cons--logo" href=""><img src="images/CIPE logo.png" alt="CIPE logo"></a>
                     </div>
                 </div>
-                <div class="carousel-item row consortium--row">
+                <div class="carousel-item consortium--row">
                     <div class="col col-md-12">
                         <a class="cons--logo" href=""><img src="images/AOTS logo.png" alt="AOTS logo"></a>
                         <a class="cons--logo" href=""><img src="images/CIPE logo.png" alt="CIPE logo"></a>
@@ -293,7 +293,7 @@
                         <a class="cons--logo" href=""><img src="images/ADFIM logo.png" alt="ADFIM logo"></a>
                     </div>
                 </div>
-                <div class="carousel-item row consortium--row">
+                <div class="carousel-item consortium--row">
                     <div class="col col-md-12">
                         <a class="cons--logo" href=""><img src="images/AIM logo.png" alt="AIM logo"></a>
                         <a class="cons--logo" href=""><img src="images/ADFIM logo.png" alt="ADFIM logo"></a>
