--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         </div>
     </Section>
 
-    <!--Credentialing Program-->
+     <!--Credentialing Program-->
 
     <section class="container">
         <div class="row credential--row">
             <h2 class="title credential--title">Credentialing Program</h2>
-            <div class="col col-sm-12 col-md-12 col-xl-4">
+            <div class="col col-sm-12 col-xxs col-md-6 col-xl-4">
                 <div class="card credetial--card">
                     <div class="card-body credential--body">
                         <p class="card-text">Level One</p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="col col-sm-12 col-md-12 col-xl-4">
+            <div class="col col-sm-12 col-xxs col-md-6 col-xl-4">
                 <div class="card credetial--card">
                     <div class="card-body credential--body">
                         <p class="card-text">Level Two</p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="col col-sm-12 col-md-12 col-xl-4">
+            <div class="col col-sm-12 col-xxs col-md-6 col-xl-4">
                 <div class="card credetial--card">
                     <div class="card-body credential--body">
                         <p class="card-text">Level Three</p>
@@ -212,7 +212,7 @@
         <div class="container">
             <h2 class="title">Online courses</h2>
             <div class="row online--course--row">
-                <div class="col col-xl-3 col-md-6 col-sm-12">
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6 col-sm-12">
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6 col-sm-12">
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-xl-3 col-md-6 col-sm-12">
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
                         <img src="images/Sample Course.jpg" class="card-img-top" alt="">
