--- a/index.html
+++ b/index.html
@@ -25,19 +25,22 @@
                     <a href="index.html" class="menu--link">Home</a>
                 </li>
                 <li class="menu--item">
-                    <a href="#" class="menu--link">About</a>
+                    <a href="about.html" class="menu--link">About</a>
                 </li>
                 <li class="menu--item">
-                    <a href="#" class="menu--link">Events</a>
+                    <a href="events.html" class="menu--link">Events</a>
                 </li>
                 <li class="menu--item">
-                    <a href="#" class="menu--link">Testimonials</a>
+                    <a href="course.html" class="menu--link">Courses</a>
                 </li>
                 <li class="menu--item">
-                    <a href="#" class="menu--link">Gallery</a>
+                    <a href="testimonials.html" class="menu--link">Testimonials</a>
                 </li>
                 <li class="menu--item">
-                    <a href="#" class="menu--link">Contact</a>
+                    <a href="news.html" class="menu--link">News</a>
+                </li>
+                <li class="menu--item">
+                    <a href="contact.html" class="menu--link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -60,7 +63,7 @@
         </div>
     </Section>
 
-     <!--Credentialing Program-->
+    <!--Credentialing Program-->
 
     <section class="container">
         <div class="row credential--row">
@@ -104,31 +107,27 @@
                         <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="">
-                            <h3>Change Leadership for Growth</h3>
+                        <a href="single.html">
+                            <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
-                            cum, magni hic
-                            maxime
-                            placeat?</p>
-                        <a class="event--rm--btn" href="#">Read more</a>
+                            cum, magni hic maxime placeat?</p>
+                        <a class="event--rm--btn" href="single.html">Read more</a>
                     </div>
                 </div>
 
                 <div class="event--content--wrapper">
                     <div class="event----content--img">
                         <img src="images/CLG feature.png" alt="">
-                        <p class="event--date">SEPT. 9-13</p>
+                        <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="">
-                            <h3>Change Leadership for Growth</h3>
+                        <a href="single.html">
+                            <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
-                            cum, magni hic
-                            maxime
-                            placeat?</p>
-                        <a class="event--rm--btn" href="#">Read more</a>
+                            cum, magni hic maxime placeat?</p>
+                        <a class="event--rm--btn" href="single.html">Read more</a>
                     </div>
                 </div>
                 <div class="vmore--btn">
@@ -318,39 +317,41 @@
     <section>
         <div class="footer--container">
             <div class="container">
-            <div class="footer row">
-                <div class="footer--logo col col-md-4 col-sm-12">
-                    <img src="images/IDF.jpg" alt="">
-                    <p>Tel.: +63 2 88161672</p>
-                    <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
-                    <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span></p>
-                    <hr class="footer--hr">
-                </div>
+                <div class="footer row">
+                    <div class="footer--logo col col-md-4 col-sm-12">
+                        <img src="images/IDF.jpg" alt="">
+                        <p>Tel.: +63 2 88161672</p>
+                        <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
+                        <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span
+                                class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span>
+                        </p>
+                        <hr class="footer--hr">
+                    </div>
 
-                <div class="footer--menu col col-md-4 col-sm-12">
-                    <h2>Menu</h2>
+                    <div class="footer--menu col col-md-4 col-sm-12">
+                        <h2>Menu</h2>
                         <li><a href="">Home</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Events</a></li>
-                        <li><a href="">Course</a></li>
+                        <li><a href="">Courses</a></li>
                         <li><a href="">Testimonials</a></li>
-                        <li><a href="">Gallery</a></li>
+                        <li><a href="">News</a></li>
                         <li><a href="">Contact</a></li>
                         <hr class="footer--hr">
-                </div>
+                    </div>
 
-                <div class="footer--subscribe col col-md-4 col-sm-12">
-                    <h2>Subcribe now</h2>
-                    <form>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name">
-                        <label for="email">Email:</label>
-                        <input type="text" id="name">
-                        <button class="btn subscribe--btn">Submit</button>
-                    </form>
+                    <div class="footer--subscribe col col-md-4 col-sm-12">
+                        <h2>Subcribe now</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name">
+                            <label for="email">Email:</label>
+                            <input type="text" id="name">
+                            <button class="btn subscribe--btn">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 
