--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                     <a href="index.html" class="menu--link">Home</a>
                 </li>
                 <li class="menu--item">
-                    <a href="about.html" class="menu--link">About</a>
+                    <a href="/about.html" class="menu--link">About</a>
                 </li>
                 <li class="menu--item">
-                    <a href="events.html" class="menu--link">Events</a>
+                    <a href="/events.html" class="menu--link">Events</a>
                 </li>
                 <li class="menu--item">
-                    <a href="course.html" class="menu--link">Courses</a>
+                    <a href="/course.html" class="menu--link">Courses</a>
                 </li>
                 <li class="menu--item">
-                    <a href="testimonials.html" class="menu--link">Testimonials</a>
+                    <a href="/testimonials.html" class="menu--link">Testimonials</a>
                 </li>
                 <li class="menu--item">
-                    <a href="news.html" class="menu--link">News</a>
+                    <a href="/news.html" class="menu--link">News</a>
                 </li>
                 <li class="menu--item">
-                    <a href="contact.html" class="menu--link">Contact</a>
+                    <a href="/contact.html" class="menu--link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -107,12 +107,12 @@
                         <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="single.html">
+                        <a href="/single.html">
                             <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
                             cum, magni hic maxime placeat?</p>
-                        <a class="event--rm--btn" href="single.html">Read more</a>
+                        <a class="event--rm--btn" href="/single.html">Read more</a>
                     </div>
                 </div>
 
@@ -122,12 +122,12 @@
                         <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="single.html">
+                        <a href="/single.html">
                             <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
                             cum, magni hic maxime placeat?</p>
-                        <a class="event--rm--btn" href="single.html">Read more</a>
+                        <a class="event--rm--btn" href="/single.html">Read more</a>
                     </div>
                 </div>
                 <div class="vmore--btn">
