--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="index.html" class="menu--link">Home</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/about.html" class="menu--link">About</a>
+                    <a href="about.html" class="menu--link">About</a>
                 </li>
                 <li class="menu--item">
                     <a href="/events.html" class="menu--link">Events</a>
