--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header sticky-top">
         <nav class="navbar ">
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
             <ul class="nav--menu">
@@ -28,19 +28,19 @@
                     <a href="about.html" class="menu--link">About</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/events.html" class="menu--link">Events</a>
+                    <a href="events.html" class="menu--link">Events</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/course.html" class="menu--link">Courses</a>
+                    <a href="course.html" class="menu--link">Courses</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/testimonials.html" class="menu--link">Testimonials</a>
+                    <a href="testimonials.html" class="menu--link">Testimonials</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/news.html" class="menu--link">News</a>
+                    <a href="news.html" class="menu--link">News</a>
                 </li>
                 <li class="menu--item">
-                    <a href="/contact.html" class="menu--link">Contact</a>
+                    <a href="contact.html" class="menu--link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -107,31 +107,31 @@
                         <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="/single.html">
-                            <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
+                        <a href="single.html">
+                            <h3>Change Leadership for Growth</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
                             cum, magni hic maxime placeat?</p>
-                        <a class="event--rm--btn" href="/single.html">Read more</a>
+                        <a class="event--rm--btn" href="single.html">Read more</a>
                     </div>
                 </div>
 
                 <div class="event--content--wrapper">
                     <div class="event----content--img">
-                        <img src="images/CLG feature.png" alt="">
+                        <img src="images/Sampleflyer.jpg" alt="">
                         <p class="event--date">AUG. 9-13</p>
                     </div>
                     <div class="event--content--text">
-                        <a href="/single.html">
+                        <a href="single.html">
                             <h3>Sustainable Reporting: Embedding Sustainability into your...</h3>
                         </a>
                         <p class="event--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque
                             cum, magni hic maxime placeat?</p>
-                        <a class="event--rm--btn" href="/single.html">Read more</a>
+                        <a class="event--rm--btn" href="single.html">Read more</a>
                     </div>
                 </div>
                 <div class="vmore--btn">
-                    <a href="#">View more</a>
+                    <a href="events.html">View more</a>
                 </div>
             </div>
 
@@ -144,13 +144,31 @@
                         <div class="carousel-inner test--carousel">
                             <div class="carousel-item active">
                                 <div class="test-item">
+                                    <i class="fas fa-3x fa-quote-right"></i>
                                     <p class="test--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         Consectetur ea, libero
                                         repudiandae vel vero velit quae esse, ipsum nesciunt!</p>
+                                        <a href="#">Read more</a>
                                     <div class="test--img--container">
                                         <img src="images/Dummy Man.jpg" alt="">
                                     </div>
-                                    <p class="test--name">Marvin C. Garcia</p>
+                                    <p class="test--name">Enrique I. Florencio</p>
+                                    <p class="test--desig">Secretary General</p>
+                                    <p class="test--inst">Association of Development Financing Institutions in Asia and
+                                        the Pacific</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="test-item">
+                                    <i class="fas fa-3x fa-quote-right"></i>
+                                    <p class="test--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        Consectetur ea, libero
+                                        repudiandae vel vero velit quae esse, ipsum nesciunt!</p>
+                                        <a href="#">Read more</a>
+                                    <div class="test--img--container">
+                                        <img src="images/Dummy Man.jpg" alt="">
+                                    </div>
+                                    <p class="test--name">Rem Laodeño</p>
                                     <p class="test--desig">IT Specialist</p>
                                     <p class="test--inst">Association of Development Financing Institutions in Asia and
                                         the Pacific</p>
@@ -158,23 +176,27 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="test-item">
+                                    <i class="fas fa-3x fa-quote-right"></i>
                                     <p class="test--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         Consectetur ea, libero
                                         repudiandae vel vero velit quae esse, ipsum nesciunt!</p>
+                                        <a href="#">Read more</a>
                                     <div class="test--img--container">
                                         <img src="images/Dummy Man.jpg" alt="">
                                     </div>
-                                    <p class="test--name">Marvin C. Garcia</p>
-                                    <p class="test--desig">IT Specialist</p>
+                                    <p class="test--name">Tinette O. Arenas</p>
+                                    <p class="test--desig">Information Tech Head</p>
                                     <p class="test--inst">Association of Development Financing Institutions in Asia and
                                         the Pacific</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <div class="test-item">
+                                    <i class="fas fa-3x fa-quote-right"></i>
                                     <p class="test--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         Consectetur ea, libero
                                         repudiandae vel vero velit quae esse, ipsum nesciunt!</p>
+                                        <a href="#">Read more</a>
                                     <div class="test--img--container">
                                         <img src="images/Dummy Man.jpg" alt="">
                                     </div>
@@ -214,11 +236,35 @@
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg2.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/development-banking-101/">Developing an Environmental and Social Risk Management...</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Enrique I. Florencio<br><span>Secretary General</span></p>
+                            <a href="https://www.adfiapanex.info/courses/development-banking-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg3.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/mobile-photography-101/">Mobile Photography 101</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Rem Laodeño<br><span>IT Specialist</span></p>
+                            <a href="https://www.adfiapanex.info/courses/mobile-photography-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg1.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Development Banking Principles</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Ms. Tinette O. Arenas<br><span>Information Tech Head</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
@@ -226,35 +272,11 @@
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg4.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="">Introduction to Time Management</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Marvin C. Garcia<br><span>IT Specialist</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
@@ -341,7 +363,7 @@
                     </div>
 
                     <div class="footer--subscribe col col-md-4 col-sm-12">
-                        <h2>Subcribe now</h2>
+                        <h2>Subscribe now</h2>
                         <form>
                             <label for="name">Name:</label>
                             <input type="text" id="name">
