--- a/course.html
+++ b/course.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+     <header class="header sticky-top">
         <nav class="navbar ">
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
             <ul class="nav--menu">
@@ -42,6 +42,7 @@
                     <a href="contact.html" class="menu--link">Contact</a>
                 </li>
             </ul>
+            
             <div class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -49,6 +50,162 @@
             </div>
         </nav>
     </header>
+
+    <div class="page--title--container">
+        <h1>All Courses</h1>
+        <a href="https://www.vecteezy.com/free-vector/web">
+        <img src="images/61_Elearning_Flat12.png" alt="https://www.freevector.com/businesspeople-and-map#"></a>
+    </div>
+    
+    <section class="container">
+        <div class="post--breadcrum">
+            <span class="back--to--home"><a href="index.html">Back to Home <i
+                        class="fas fa-1x fa-home"></i></a></span>
+            <span class="crum--hr">|</span>
+            <span class="all--events"><a href="events.html">All Courses</a></span>
+        </div>
+        <div class="all--courses--container">
+            <div class="row online--course--row">
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
+                                qui.</p>
+                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="footer--container">
+            <div class="container">
+                <div class="footer row">
+                    <div class="footer--logo col col-md-4 col-sm-12">
+                        <img src="images/IDF.jpg" alt="">
+                        <p>Tel.: +63 2 88161672</p>
+                        <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
+                        <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span
+                                class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span>
+                        </p>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--menu col col-md-4 col-sm-12">
+                        <h2>Menu</h2>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Events</a></li>
+                        <li><a href="">Courses</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">News</a></li>
+                        <li><a href="">Contact</a></li>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--subscribe col col-md-4 col-sm-12">
+                        <h2>Subscribe now</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name">
+                            <label for="email">Email:</label>
+                            <input type="text" id="name">
+                            <button class="btn subscribe--btn">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
