--- a/events.html
+++ b/events.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+   <header class="header sticky-top">
         <nav class="navbar ">
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
             <ul class="nav--menu">
@@ -49,6 +49,147 @@
             </div>
         </nav>
     </header>
+
+    <div class="page--title--container">
+        <h1>All Events</h1>
+        <a href="https://www.vecteezy.com/free-vector/vector">
+            <img src="images/training_businessman.png" alt="https://www.freevector.com/businesspeople-and-map#"></a>
+    </div>
+    <section>
+            <div class="container">
+                <div class="post--breadcrum">
+                    <span class="back--to--home"><a href="index.html">Back to Home <i
+                                class="fas fa-1x fa-home"></i></a></span>
+                    <span class="crum--hr">|</span>
+                    <span class="all--events"><a href="events.html">All Events</a></span>
+                </div>
+                <div class="all--event--container">
+                    <div class="row online--course--row">
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">ADFIAP launches training course for small island SME lending with CENDB</a></h5>
+                                    <p class="card-text">January 14 - 29, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img1.jpg" class="card-img-top" alt="flyers-photo">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Bank Operational Risk and Resiliency and the Role of Digitalization</a></h5>
+                                    <p class="card-text">March 16 - 19, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img2.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Virtual Seminar-Workshop on Strengthening Loan Portfolio Management in the Credit Process</a></h5>
+                                    <p class="card-text">June 15 - 17, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img3.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Developing Environmental & Social Risk Management Program (ESRM)</a></h5>
+                                    <p class="card-text">July 6 - 13, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img4.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Fostering Sustainable Finance and Development</a></h5>
+                                    <p class="card-text">September 14 - 17, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img5.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Bank Operational Risk and Resiliency and the Role of Digitalization (BORRD)</a></h5>
+                                    <p class="card-text">October 9 - 22, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img6.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">44th ADFIAP Annual Meetings-Hybrid</a></h5>
+                                    <p class="card-text">October 27 - 28, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                            <div class="card">
+                                <img src="images/img7.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <h5 class="card-title"><a href="single.html">Developing Environmental & Social Risk Management Program (ESRM)</a></h5>
+                                    <p class="card-text">November 16 - 23, 2021</p>
+                                    <a href="single.html" class="btn btn-primary online--course--btn">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+    </section>
+
+    <section>
+        <div class="footer--container">
+            <div class="container">
+                <div class="footer row">
+                    <div class="footer--logo col col-md-4 col-sm-12">
+                        <img src="images/IDF.jpg" alt="">
+                        <p>Tel.: +63 2 88161672</p>
+                        <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
+                        <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span
+                                class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span>
+                        </p>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--menu col col-md-4 col-sm-12">
+                        <h2>Menu</h2>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Events</a></li>
+                        <li><a href="">Courses</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">News</a></li>
+                        <li><a href="">Contact</a></li>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--subscribe col col-md-4 col-sm-12">
+                        <h2>Subscribe now</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name">
+                            <label for="email">Email:</label>
+                            <input type="text" id="name">
+                            <button class="btn subscribe--btn">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
