--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+   <header class="header sticky-top">
         <nav class="navbar ">
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
             <ul class="nav--menu">
@@ -49,6 +49,47 @@
             </div>
         </nav>
     </header>
+
+    <section>
+        <div class="footer--container">
+            <div class="container">
+                <div class="footer row">
+                    <div class="footer--logo col col-md-4 col-sm-12">
+                        <img src="images/IDF.jpg" alt="">
+                        <p>Tel.: +63 2 88161672</p>
+                        <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
+                        <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span
+                                class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span>
+                        </p>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--menu col col-md-4 col-sm-12">
+                        <h2>Menu</h2>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Events</a></li>
+                        <li><a href="">Courses</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">News</a></li>
+                        <li><a href="">Contact</a></li>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--subscribe col col-md-4 col-sm-12">
+                        <h2>Subscribe now</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name">
+                            <label for="email">Email:</label>
+                            <input type="text" id="name">
+                            <button class="btn subscribe--btn">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
