--- a/about.html
+++ b/about.html
@@ -57,63 +57,75 @@
         </div>
 
         <div class="container about--us--container">
-            <div class="about--us--logo--container">
-                <img src="images/IDF.jpg" alt="IDF Logo">
-            </div>
-            <div class="about--us--content">
-                <h1>What is IDF?</h1>
-                <p>
-                    Institute of Development Finance (IDF) is the professional training and career service center of
-                    ADFIAP. It is backed by 30 years of experience and expertise in organizing training programs,
-                    seminars, and conferences around the world through the Association, its members, and international
-                    affiliates. It has in its training portfolio, a variety of subjects in development banking and
-                    management, a worldwide network of resource persons and experts, and a respectable collection of
-                    teaching materials and case studies.</p>
-            </div>
-        </div>
-        <div class="container-fluid what--we--do">
-            <div class="about--us--text--2">
-                <h1>What we Do?</h1>
-                <p> ADFIAP’s Institute of Development Finance (IDF) conducts regular training and capacity-building
-                    activities
-                    under two types: full or partially subsidized and fee-based. Programs which are fully or partially
-                    subsidized are organized and implemented with donor-institutions providing grants and technical
-                    assistance. Those on fee basis are conducted in partnership with known and reputable learning
-                    institutions from around the world.</p>
-            </div>
-            <div class="about--us--text--2--img">
-                <img src="images/About us img.png" alt="Program photos">
+            <div class="row">
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs about--us--logo--container">
+                    <img src="images/IDF.jpg" alt="IDF Logo">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs about--us--content">
+                    <h1>What is IDF?</h1>
+                    <p>
+                        Institute of Development Finance (IDF) is the professional training and career service center of
+                        ADFIAP. It is backed by 30 years of experience and expertise in organizing training programs,
+                        seminars, and conferences around the world through the Association, its members, and international
+                        affiliates. It has in its training portfolio, a variety of subjects in development banking and
+                        management, a worldwide network of resource persons and experts, and a respectable collection of
+                        teaching materials and case studies.</p>
+                </div>
             </div>
         </div>
-        <div class="container-fluid about--mmf">
-            <div class="its--mission">
-                <h1>Its Mission</h1>
-                <p>To provide continuing education and technical assistance to bankers and finance executives engaged in
-                    the financing of development.
-                </p>
+        <div class="container-fluid wwd">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-xxs col-lg-6 col-md-6 col-sm-12">
+                        <h1>What we Do?</h1>
+                        <p> ADFIAP’s Institute of Development Finance (IDF) conducts regular training and capacity-building
+                            activities
+                            under two types: full or partially subsidized and fee-based. Programs which are fully or partially
+                            subsidized are organized and implemented with donor-institutions providing grants and technical
+                            assistance. Those on fee basis are conducted in partnership with known and reputable learning
+                            institutions from around the world.</p>
+                    </div>
+                    <div class="col col-lg-6 col-md-6 col-sm-12">
+                        <div class="about--us--wwd--img">
+                            <img src="images/About us img.png" alt="Program photos">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="its--management">
-                <h1>The IDF Management</h1>
-                <p>The IDF is managed by the Programs & Services Unit of the Association. Its officers and staff have a
-                    combined international training experience of over 50 years in training needs assessment, design and
-                    delivery, conference and training events organizing, and human resource management. It has a
-                    worldwide reach of over a hundred training managers who provide consulting and advisory services to
-                    the Institute.
-                </p>
-            </div>
-            <div class="its--faculty">
-                <h1>The Faculty</h1>
-                <p>To ensure effectiveness and relevance of the training programs, IDF utilizes a faculty and
-                    facilitator composed of carefully-selected professors and management experts from the Asia-Pacific
-                    Region.
-                </p>
-            </div>
+        </div>
+        <div class="container about--mmf">
+            <div class="row">
+                <div class="col col-lg-4 col-md-6 col-sm-12 col-xxs">
+                    <h1>Its Mission</h1>
+                    <p>To provide continuing education and technical assistance to bankers and finance executives engaged in
+                        the financing of development.
+                    </p>
+                </div>
+                <div class="col col-lg-4 col-md-12 col-sm-12 col-xxs">
+                    <h1>The IDF Management</h1>
+                    <p>The IDF is managed by the Programs & Services Unit of the Association. Its officers and staff have a
+                        combined international training experience of over 50 years in training needs assessment, design and
+                        delivery, conference and training events organizing, and human resource management. It has a
+                        worldwide reach of over a hundred training managers who provide consulting and advisory services to
+                        the Institute.
+                    </p>
+                </div>
+                <div class="col col-lg-4 col-md-6 col-sm-12 col-xxs">
+                    <h1>The Faculty</h1>
+                    <p>To ensure effectiveness and relevance of the training programs, IDF utilizes a faculty and
+                        facilitator composed of carefully-selected professors and management experts from the Asia-Pacific
+                        Region.
+                    </p>
+                </div>
+            </div> 
         </div>
 
-        <div class="container-fluid about--us--the--event">
+        <hr class="custom--hr">
+
+        <div class="container about--us--the--event">
             <h1>About the Events</h1>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col col-lg-6 col-md-12 col-ms-12 col-xxs">
                     <p>Human resource development, specifically training, is one the strengths of the Association.
                         ADFIAP,
                         through its Asia-Pacific Institute of Development Finance, has organized over a hundred
@@ -133,7 +145,7 @@
                         himself.
                     </p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col col-lg-6 col-md-12 col-ms-12 col-xxs">
                     <a href="https://www.vecteezy.com/free-vector/girl">
                         <img src="images/vecteezypeople-activity-collaboration-professional-character-illustrationAW0821_generated.jpg"
                             alt="collaboration-professional-character-illustration"></a>
@@ -158,8 +170,8 @@
                     The Asia-Pacific Institute of Development Finance (IDF), ADFIAP’s training and career development
                     center, is the credentialing unit of the Association.
                 </p>
+                <p class="about--tpa--content">There are three (3) levels of credentials for the professional and managerial staff of DFIs</p>
                 <div class="row credential--row">
-                    <h2>There are three (3) levels of credentials for the professional and managerial staff of DFIs</h2>
                     <div class="col col-sm-12 col-xxs col-md-6 col-xl-4">
                         <div class="card credetial--card">
                             <div class="card-body credential--body">
