--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,83 @@
             </div>
         </nav>
     </header>
+    
+    <div class="page--title--container">
+        <h1>Contact Us</h1>
+        <a href="https://www.vecteezy.com/free-vector/web">
+            <img src="images/contact-me-illustration-vector.png" alt="https://www.vecteezy.com/free-vector/phone"></a>
+    </div>
 
+    <section class="container contact--us--container">
+        <div class="row">
+            <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs">
+                <div class="mapouter">
+                    <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no"
+                            marginheight="0" marginwidth="0"
+                            src="https://maps.google.com/maps?width=1031&amp;height=400&amp;hl=en&amp;q=2nd Floor Skyland Plaza Sen. Gil Puyat Avenue Makati City&amp;t=p&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs">
+                <div class="row">
+                    <h1>Contact Us</h1>
+                    <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs">
+                        <div class="address--container">
+                            <ul class="address">
+                                <li>Association of Development Financing Institutions in Asia and the Pacific (ADFIAP)</li>
+                                <li>Second Floor Skyland Plaza Building</li>
+                                <li>Sen. Gil Puyat Avenue Makati City <br> 1200 Philippines</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs">
+                        <div class="contact--details--container">
+                            <ul class="contacts">
+                                <li>Tel. No.: +63 2 88161672; 8843-0932; 8843-5892</li>
+                                <li>Email: inquiries@adfiap.org</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container form--container">
+            <div class="row">
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="firstname" class="form-label">First Name</label>
+                    <input type="text" id="firstname" class="form-control" placeholder="First name" aria-label="First name">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="lastname" class="form-label">Last Name</label>
+                    <input type="text" id="lastname" class="form-control" placeholder="Last name" aria-label="Last name">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="mtno" class="form-label">Mobile/Telephone</label>
+                    <input type="text" id="mtno" class="form-control" placeholder="Mobile/Telephone" aria-label="Mobile/Telephone">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="jobtitle" class="form-label">Job Title</label>
+                    <input type="text" id="jobtitle" class="form-control" placeholder="Job Title" aria-label="Job Title">
+                </div>
+                <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs form-input">
+                    <label for="Institution" class="form-label">Institution</label>
+                    <input type="text" id="Institution" class="form-control" placeholder="Institution" aria-label="Institution">
+                </div>
+                <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs form-input">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+            <div class="vmore--btn">
+                <a href="#">Submit</a>
+            </div>
+        </div>
+    </section>
+    
     <section>
         <div class="footer--container">
             <div class="container">
