--- a/news.html
+++ b/news.html
@@ -49,6 +49,77 @@
             </div>
         </nav>
     </header>
+    
+    <div class="page--title--container">
+        <h1>All News</h1>
+        <a href="https://www.vecteezy.com/free-vector/web">
+            <img src="images/PRESS RELEASE.png" alt="https://www.vecteezy.com/free-vector/news"></a>
+    </div>
+
+    <section class="container all--news--container">
+        <div class="post--breadcrum">
+            <span class="back--to--home"><a href="index.html">Back to Home <i
+                        class="fas fa-1x fa-home"></i></a></span>
+            <span class="crum--hr">|</span>
+            <span class="all--events"><a href="events.html">All News</a></span>
+        </div>
+        <div class="row">
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs">
+                <h1>IDF conducts webinar on sustainability reporting, SDGs</h1>
+                <span>Date posted: August 20, 2021</span>
+                <div class="row">
+                    <div class="col col-lg-2 col-md-12 col-sm-12 col-xxs">
+                        <img src="images/Sampleflyer.jpg" alt="news photo">
+                    </div>
+                    <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum accusamus beatae
+                            excepturi a velit doloribus expedita suscipit, temporibus dignissimos ipsum sed sit? Nostrum
+                            perspiciatis placeat temporibus eum ipsa quaerat.</p>
+                        <div class="news--rd">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs">
+                <h1>IDF conducts webinar on sustainability reporting, SDGs</h1>
+                <span>Date posted: August 20, 2021</span>
+                <div class="row">
+                    <div class="col col-lg-2 col-md-12 col-sm-12 col-xxs">
+                        <img src="images/Sampleflyer.jpg" alt="news photo">
+                    </div>
+                    <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum accusamus beatae
+                            excepturi a velit doloribus expedita suscipit, temporibus dignissimos ipsum sed sit? Nostrum
+                            perspiciatis placeat temporibus eum ipsa quaerat.</p>
+                        <div class="news--rd">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xxs">
+                <h1>IDF conducts webinar on sustainability reporting, SDGs</h1>
+                <span>Date posted: August 20, 2021</span>
+                <div class="row">
+                    <div class="col col-lg-2 col-md-12 col-sm-12 col-xxs">
+                        <img src="images/Sampleflyer.jpg" alt="news photo">
+                    </div>
+                    <div class="col col-lg-6 col-md-6 col-sm-12 col-xxs">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores earum accusamus beatae
+                            excepturi a velit doloribus expedita suscipit, temporibus dignissimos ipsum sed sit? Nostrum
+                            perspiciatis placeat temporibus eum ipsa quaerat.</p>
+                        <div class="news--rd">
+                            <a href="#">Read more</a>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="footer--container">
