--- a/events.html
+++ b/events.html
@@ -151,7 +151,7 @@
             </div>
     </section>
 
-    <section>
+        <section>
         <div class="footer--container">
             <div class="container">
                 <div class="footer row">
@@ -167,13 +167,13 @@
 
                     <div class="footer--menu col col-md-4 col-sm-12">
                         <h2>Menu</h2>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Events</a></li>
-                        <li><a href="">Courses</a></li>
-                        <li><a href="">Testimonials</a></li>
-                        <li><a href="">News</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="course.html">Courses</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <hr class="footer--hr">
                     </div>
 
